# pyunifi

./: README.org  pyproject.toml
tests/: test_unifiwrapper.py
unifiwrapper/: __init__.py  trafficrule.py  unificontroller.py
utils/: __init__.py  json.py
